test-cases/final-dump/unique_generic.wybe
# Test for issue #224
# 

type {unique} u { pub u0 | u1 }


?lst = [u0,u1]       # valid, but we can make it an error
?lst2 = reverse(lst) # definitely an error

def bla(lst:list(u), ?hd:u) {     # valid, but we can make it an error
    if {lst = [?h|_] :: ?hd = h  # definitely an error
    |   ?hd = u0
    }
}

def foo(a) { pass } # a has an inferred generic type

foo(u0) # cannot bind to an inferred generic type
